[package]
name = "actix-async"
version = "0.1.0"
authors = ["Angus Campbell <angus.b.e.campbell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.7"
actix-rt = "0.2.4"
awc = { version="0.2.4", features=["rust-tls"] }

futures = "0.1.28"
log = "0.4.8"
env_logger = "0.6.2"